infra/base/positions-depl.yaml
#section that create the deployment and the pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: positions-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: positions
  template: 
    metadata:
      labels:
        app: positions
    spec:
      containers:
        - name: positions
          image: ahmed0ahmed/racer-positions
          imagePullPolicy : IfNotPresent
---
#kubernets service cluesterip so we can acess the pod
#default service is clusterip service that why we didint have to
#specifie it
apiVersion: v1
kind: Service
metadata: 
  name: positions-srv
spec: 
  selector:
    app: positions
  ports:
    - name: positions
      protocol: TCP
      port: 3000
      targetPort: 3000
