infra/base/predictions-depl.yaml
#section that create the deployment and the pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predictions-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: predictions
  template: 
    metadata:
      labels:
        app: predictions
    spec:
      containers:
        - name: predictions
          image: ahmed0ahmed/racer-predictions
          imagePullPolicy : IfNotPresent
---
#kubernets service cluesterip so we can acess the pod
#default service is clusterip service that why we didint have to
#specifie it
apiVersion: v1
kind: Service
metadata: 
  name: predictions-srv
spec: 
  selector:
    app: predictions
  ports:
    - name: predictions
      protocol: TCP
      port: 8000
      targetPort: 8000
