infra/base/races-depl.yaml
#section that create the deployment and the pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: races-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: races
  template: 
    metadata:
      labels:
        app: races
    spec:
      containers:
        - name: races
          image: ahmed0ahmed/racer-races
          imagePullPolicy : IfNotPresent
---
#kubernets service cluesterip so we can acess the pod
#default service is clusterip service that why we didint have to
#specifie it
apiVersion: v1
kind: Service
metadata: 
  name: races-srv
spec: 
  selector:
    app: races
  ports:
    - name: races
      protocol: TCP
      port: 3000
      targetPort: 3000
