infra/base/socket-gateway-depl.yaml
#section that create the deployment and the pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: socket-gateway
  template: 
    metadata:
      labels:
        app: socket-gateway
    spec:
      containers:
        - name: socket-gateway
          image: ahmed0ahmed/racer-socket-gateway
          imagePullPolicy : IfNotPresent
---
#kubernets service cluesterip so we can acess the pod
#default service is clusterip service that why we didint have to
#specifie it
apiVersion: v1
kind: Service
metadata: 
  name: socket-gateway-srv
spec: 
  selector:
    app: socket-gateway
  ports:
    - name: socket-gateway
      protocol: TCP
      port: 3000
      targetPort: 3000
